<resources>
    <string name="app_name">Hotel</string>
    <string name="tv_correo">Correo electrónico</string>
    <string name="tv_contra">Contraseña</string>
    <string name="msg_correo">Campo para ingresar su correo electrónico</string>
    <string name="msg_contra">Campo para ingresar su contraseña</string>
    <string name="msg_btLogin">Boton para hacer login al App</string>
    <string name="msg_btRegister">Boton para registrarse al App</string>
    <string name="msg_fallo_registro">Falló el registro del usuario</string>
    <string name="msg_fallo_login">Falló el login del usuario</string>
    <string name="title_activity_principal">Principal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_hotel">Hoteles</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="menu_home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="msg_nombreH">Nombre del hotel</string>
    <string name="msg_correo_add">Correo del hotel</string>
    <string name="msg_telefono_add">Teléfono del hotel</string>
    <string name="msg_web_add">Sitio web del hotel</string>
    <string name="msg_hotel_add">Hotel agregado</string>
    <string name="bt_add_hotel">Agregar hotel</string>
</resources>