<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingTop="170dp"
    android:paddingEnd="20dp"
    android:paddingRight="20dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_correo"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="36sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_correo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/msg_correo"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textAlignment="textStart"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_contra"
        android:textAlignment="center"
        android:textSize="36sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_contra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/msg_contra"
        android:ems="10"
        android:inputType="textPassword"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:paddingTop="40dp">

        <ImageButton
            android:id="@+id/bt_registrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/msg_btRegister"
            app:srcCompat="@drawable/ic_registrar" />

        <ImageButton
            android:id="@+id/bt_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/msg_btLogin"
            app:srcCompat="@drawable/ic_login" />
    </LinearLayout>
</LinearLayout>